# exercism

./: .gitignore  README.md
python/: pyproject.toml
python/acronym/: acronym.py
python/acronym/.exercism/: metadata.json
python/black-jack/: black_jack.py
python/black-jack/.exercism/: metadata.json
python/card-games/: lists.py
python/card-games/.exercism/: metadata.json
python/cater-waiter/: sets.py
python/cater-waiter/.exercism/: metadata.json
python/chaitanas-colossal-coaster/: list_methods.py
python/chaitanas-colossal-coaster/.exercism/: metadata.json
python/clock/: clock.py
python/clock/.exercism/: metadata.json
python/currency-exchange/: exchange.py
python/darts/: darts.py
python/darts/.exercism/: metadata.json
python/ellens-alien-game/: classes.py
python/ghost-gobble-arcade-game/: arcade_game.py
python/grade-school/: grade_school.py
python/grains/: grains.py
python/guidos-gorgeous-lasagna/: lasagna.py
python/hamming/: hamming.py
python/inventory-management/: dicts.py
python/isogram/: isogram.py
python/kindergarten-garden/: kindergarten_garden.py
python/leap/: leap.py
python/little-sisters-essay/: string_methods.py
python/little-sisters-vocab/: strings.py
python/luhn/: luhn.py
python/making-the-grade/: loops.py
python/matrix/: matrix.py
python/meltdown-mitigation/: conditionals.py
python/raindrops/: raindrops.py
python/scrabble-score/: scrabble_score.py
python/tisbury-treasure-hunt/: tuples.py
python/triangle/: triangle.py
python/twelve-days/: twelve_days.py
python/word-count/: word_count.py
(+39 files in other folders)
