[tool.poetry]
name = "excercism"
version = "0.1.0"
description = ""
authors = ["Jean-Paul Weijers <jpweijers@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
